# skills-forge

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  ROADMAP_1.0.0.md  coverage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-preflight-review.html  sitemap.xml
.agents/skills/: my-skill
.claude/skills/: dep-consumer  my-skill  test-skill
.github/workflows/: ci.yml  publish.yml
changelog/: index.html
clean-principles-for-skills/: index.html
contributing/: index.html
design/clean-principles/: index.html
design/universal-export/: index.html
docs/: changelog.md  clean-principles-for-skills.md  contributing.md  getting-started.md  index.md  sharing-via-github.md  universal-export-research.md
docs/design/: clean-principles.md  universal-export.md
docs/guide/: commands.md  export-formats.md  install-targets.md  registry-publishing.md  skill-anatomy.md
exports/ai-eng-evaluator-1.0.0/: ai-eng-evaluator-mcp-server.py  ai-eng-evaluator.bedrock.xml  ai-eng-evaluator.gem.txt  ai-eng-evaluator.gpt.json  ai-eng-evaluator.system-prompt.md
exports/user-story-test-cases-0.1.0/: user-story-test-cases-mcp-server.py  user-story-test-cases.bedrock.xml  user-story-test-cases.gem.txt  user-story-test-cases.gpt.json  user-story-test-cases.system-prompt.md
getting-started/: index.html
guide/commands/: index.html
guide/export-formats/: index.html
guide/install-targets/: index.html
guide/registry-publishing/: index.html
guide/skill-anatomy/: index.html
packs/: ai-eng-evaluator-0.1.0.skillpack
packs/evaluation/: ai-eng-evaluator-1.0.0.skillpack  user-story-test-cases-0.1.0.skillpack
search/: search_index.json
sharing-via-github/: index.html
src/skill_forge/: __init__.py
templates/: README.md
templates/full-featured/: SKILL.md
templates/minimal/: SKILL.md
templates/with-references/: SKILL.md
templates/with-scripts/: SKILL.md
test/: sprint-grooming-mcp-server.py  sprint-grooming.system-prompt.md
test-skill-0.1.0/: test-skill-mcp-server.py  test-skill.assistants.json  test-skill.bedrock.xml  test-skill.gem.txt  test-skill.gemini-api.json  test-skill.gpt.json  test-skill.mistral.json  test-skill.system-prompt.md
tests/: conftest.py
tests/application/: test_create_skill.py  test_create_skill_mutation_killers.py  test_deprecate_skill.py  test_diff_skill.py  test_doctor_skill.py  test_export_skill.py  test_export_skill_bundling.py  test_governance.py  test_info_skill.py  test_install_skill.py  test_lint_integration.py  test_lint_service.py  test_lint_skill.py  test_new_exporters.py  test_pack_skill.py  test_publish_skill.py  test_publish_skill_mutation_killers.py  test_requires_forge.py  test_test_skill.py  test_update_skill.py  test_yank_skill.py
tests/cli/: test_cli.py  test_cli_branch_coverage.py  test_cli_extended.py  test_sha256_warning.py
tests/domain/: test_config_model.py  test_evals_model.py  test_evals_validators.py  test_model.py  test_new_validators.py  test_skillpack_model.py  test_validators.py  test_validators_mutation_killers.py
tests/e2e/: test_e2e_scenarios.py
tests/infrastructure/: test_coverage_gaps.py  test_evals_parser.py  test_exporters.py  test_filesystem_repository.py  (+14 more)
universal-export-research/: index.html
(+55 files in other folders)
