[build-system]
requires = ["setuptools>=68.0,<71.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-forge"
version = "1.0.0"
description = "A clean-architecture toolkit for crafting, linting, packing, and sharing Claude Code skills"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Fernando Souto", email = "me@fernandosouto.dev" },
]
keywords = [
    "claude",
    "claude-code",
    "skills",
    "ai-skills",
    "llm",
    "anthropic",
    "skills-forge",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/ficiverson/skills-forge"
Repository = "https://github.com/ficiverson/skills-forge"
"Bug Tracker" = "https://github.com/ficiverson/skills-forge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mutmut>=2.4",
]

[project.scripts]
skills-forge = "skill_forge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/skill_forge/cli/main.py" = ["B008"]  # typer requires function calls in defaults

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.mutmut]
paths_to_mutate = ["src/skill_forge/"]
pytest_add_cli_args_test_selection = ["tests/"]
also_copy = ["src/"]
runner = "python3 -m pytest -p no:cov"

